--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkContentEncoding()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkContentEncoding</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:20</td>   <td>168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkResponseBody()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkResponseBody</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkResponseTime()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkResponseTime</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkServer()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkServer</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkStatusCode()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkStatusCode</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkStatusLine()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">checkStatusLine</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:11</td>   <td>-8877</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TA0001_GET_getAllBookings.getAllBookingIDs()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">&gt;&gt;getAllBookingIDs</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.getAllHeaders()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">getAllHeaders</td> 
-  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="cda26c">  <td>22/06/19 12:04:11</td>   <td>-8985</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@684220724</td>   <td></td> </tr>
-<tr bgcolor="6aca93">  <td>22/06/19 12:04:30</td>   <td>9702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.tearDown()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@5c20aab9]">tearDown</td> 
-  <td>main@684220724</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkContentEncoding()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkContentEncoding</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:26</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkResponseBody()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkResponseBody</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkResponseTime()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkResponseTime</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkServer()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkServer</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkStatusCode()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkStatusCode</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.checkStatusLine()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">checkStatusLine</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:20</td>   <td>-6258</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TA0001_GET_getAllBookings.getAllBookingIDs()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">&gt;&gt;getAllBookingIDs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.getAllHeaders()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">getAllHeaders</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="ad6278">  <td>22/06/20 11:01:19</td>   <td>-6361</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309191417</td>   <td></td> </tr>
+<tr bgcolor="7fca8a">  <td>22/06/20 11:01:33</td>   <td>6813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TA0001_GET_getAllBookings.tearDown()[pri:0, instance:com.restfulbooker.testcases.TA0001_GET_getAllBookings@55e2fe3c]">tearDown</td> 
+  <td>main@1309191417</td>   <td></td> </tr>
 </table>
